Update CI/CD workflow: deploy to GitHub Pages

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -13,6 +13,8 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      DEMO_TITLE: "GitHub Actions — Simple Demo (from env)"
 
     steps:
       - name: Checkout Repo
