--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -14,8 +14,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
-      DEMO_TITLE: "GitHub Actions — Simple Demo (from env)"
-
+      DEMO_TITLE: ${{vars.DEMO_TITLE}}
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
