--- a/.github/workflows/ftp.yaml
+++ b/.github/workflows/ftp.yaml
@@ -41,3 +41,4 @@ jobs:
           password: ${{ secrets.FTP_PASSWORD }}
           port: ${{ secrets.FTP_PORT }}
           local-dir: ./
+          server-dir: ./
