--- a/.github/workflows/ftp.yaml
+++ b/.github/workflows/ftp.yaml
@@ -40,5 +40,5 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           port: ${{ secrets.FTP_PORT }}
-          local-dir: ./
+          local-dir: /
           server-dir: /
