--- a/.github/workflows/ftp.yaml
+++ b/.github/workflows/ftp.yaml
@@ -40,10 +40,10 @@ jobs:
           FTP_PORT: ${{ secrets.FTP_PORT }}
         run: |
           echo "Listing remote root via FTP (secrets masked in logs)..."
-          apt-get update -qq
-          apt-get install -y lftp -qq
+          sudo apt-get update -qq
+          sudo apt-get install -y lftp -qq
           # list remote root (will be masked in logs)
-          lftp -u "$FTP_USERNAME","$FTP_PASSWORD" -p "$FTP_PORT" "$FTP_SERVER" -e "cls -la; quit"
+          lftp -u "$FTP_USERNAME","$FTP_PASSWORD" -p "$FTP_PORT" "$FTP_SERVER" -e "cls -la; bye"
 
       - name: Deploy to FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
