--- a/.github/workflows/ftp.yaml
+++ b/.github/workflows/ftp.yaml
@@ -40,6 +40,6 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           port: ${{ secrets.FTP_PORT }}
-          protocols: ftps
+          protocol: ftps
           local-dir: ./
           server-dir: /
