--- a/.github/workflows/ftp.yaml
+++ b/.github/workflows/ftp.yaml
@@ -38,4 +38,4 @@ jobs:
           port: 21
           protocol: ftps
           local-dir: ./
-          server-dir: /
+          server-dir: /public_html
